--- a/mvc.html
+++ b/mvc.html
@@ -16,7 +16,7 @@
 
   <div class="container">
   <h2>Model View Controller (MVC)</h2>
-  <p> Model View Controller (MVC) is a software architecture pattern.  Once predominately used in Graphical User Interface design it is now being used in web design and web application development.
+  <p> Model View Controller (MVC) is a software architecture pattern.  Once predominately used in Graphical User Interface design it is now being used in web design and web application development also.
   </p>
 
   <h3>Sources</h3>
@@ -30,5 +30,13 @@
       $("#cnavbar").replaceWith(data);
     });
   </script>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!-- <script src="assets/js/ie10-viewport-bug-workaround.js"></script> -->
 </body>
 </html>
