created template, new content

--- a/template.html
+++ b/template.html
@@ -13,15 +13,8 @@
   <!-- Nav Bar -->
   <div id="cnavbar"></div>
   <!-- Page Container -->
-
   <div class="container">
-  <h2>Model View Controller (MVC)</h2>
-  <p> Model View Controller (MVC) is a software architecture pattern.  Once predominately used in Graphical User Interface design it is now being used in web design and web application development also.
-  </p>
-  <h3>Sources</h3>
-  <ul>
-    <li><a href="https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93controller">Model View Controller, Wikipedia</a></li>
-  </ul>
+  <p>Fresh Template Page</p>
   </div>
   <script>
     $.get("./nav.html", function(data){
