--- a/nav.html
+++ b/nav.html
@@ -9,11 +9,13 @@
           </button>
           <a class="navbar-brand" href="./index.html"><img src="./us2w-s.png" alt=""></a>
         </div>
+        <!-- NavBar Static Content -->
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="links.html">Links</a></li>
             <li><a href="mvc.html">MVC</a></li>
+            <!-- Dropdown menu for development -->
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -26,7 +28,9 @@
                   <li><a href="#">One more separated link</a></li>
                 </ul>
             </li>
+            <!-- End Dropdown -->
           </ul>
         </div>
+        <!-- End Static -->
       </div>
     </nav>
