--- a/dev.html
+++ b/dev.html
@@ -17,42 +17,77 @@
     <h2>Development Tools and Notes</h2>
     <h3>Sublime Tips</h3>
       <p><a href="https://www.sublimetext.com/" class="Sublime Text Link">Sublime Text</a> is an awesome text editor. It has a vibrant community with a large library of useful and lightweight plug ins. For most of these you can substitute CTRL for CMD if you are using Windows. </p>
-      <h4>Word/Line Selection</h4>
-        To select a word, or once a word is selected to select others instances.
-        <pre><code>CMD+D</code></pre>
-        To select a line.
-        <pre><code>CMD+L</code></pre>
-        To select current scope.
-        <pre><code>CTRL+CMD+M</code></pre>
-      <h4>Sorting</h4>
-      Plain old <code> F5</code>.  Simple and effective.  Good to use with CSS.
-      <h4>Command Menu</h4>
-        Still learning everything sublime text can do here, if the package manager is installed you can access it via this tool.  You can   also change syntax highlighting options quickly from here.
-        <pre><code>CMD+SHIFT+P</code></pre>
-        Also useful is the fuzzy search using the below
-        <pre><code>CMD+P</code></pre>
-        You can also type <code>:</code> to jump to line numbers and <code>@</code> to jump to modules or functions in code.
-        Or you can get rid of the distraction
-        <pre><code>CMD+SHIFT+CTRL+F</code></pre>
-      <h4>Navigation</h4>
-        If you want to jump between tabs use
-        <pre><code>CMD+T</code></pre>
-        To navigate left/right through tabs
-        <pre><code>CMD+SHIFT+[</code></pre>
-        <pre><code>CMD+SHIFT+]</code></pre>
-        Find Window
-        <pre><code>CMD+SHIFT+F</code></pre>
-        Populate selected word into the find window.
-        <pre><code>CMD+E</code></pre>
-        REALLY HANDY, use this to navigate through modules/functions.  Useful especially with CSS.
-        <pre><code>CMD+R</code></pre>
-        Side by side docs
-        For Horizontal
-        <pre><code>CMD+ALT+2-4</code></pre>
-        For Vertical
-        <pre><code>CMD+SHIFT+ALT+2-4</code></pre>
-    <h3>Emmet Plug in for Sublime</h3>
-
+    <h3>Favorite Sublime Hot Keys</h3>
+      <table class="table table-striped table-hover">
+        <thread class="thread-inverse">
+          <tr>
+            <th>Action</th>
+            <th>Command</th>
+          </tr>
+        </thread>
+        <tbody>
+          <tr>
+            <td>Command Menu</td>
+            <td>Command + Shift + P</td>
+          </tr>
+          <tr>
+            <td>Command Search</td>
+            <td>Command + P</td>
+          </tr>
+          <tr>
+            <td>Full Screen, no distraction</td>
+            <td>Command + Shift + Control + F</td>
+          </tr>
+          <tr>
+            <td>Split Horizontal</td>
+            <td>Command + Alt + 2-4</td>
+          </tr>
+          <tr>
+            <td>Split Vertical</td>
+            <td>Command + Shift + Alt + 2-4</td>
+          </tr>
+          <tr>
+            <td>Select Word(s)</td>
+            <td>Command + D</td>
+          </tr>
+          <tr>
+            <td>Select Line</td>
+            <td>Command + L</td>
+          </tr>
+          <tr>
+            <td>Select Current Scope</td>
+            <td>Control + Command + M</td>
+          </tr>
+          <tr>
+            <td>Sort a selection</td>
+            <td>F5</td>
+          </tr>
+          <tr>
+            <td>Tab Navigation Menu</td>
+            <td>Command + T</td>
+          </tr>
+          <tr>
+            <td>Tab Navigation Left</td>
+            <td>Command + Shift + [</td>
+          </tr>
+          <tr>
+            <td>Tab Navigation Right</td>
+            <td>Command + Shift + ]</td>
+          </tr>
+          <tr>
+            <td>Find Window</td>
+            <td>Command + Shift + F</td>
+          </tr>
+          <tr>
+            <td>Find Populate selected word</td>
+            <td>Command + E</td>
+          </tr>
+          <tr>
+            <td>Navigate through Definitions and Functions</td>
+            <td>Command + R</td>
+          </tr>
+        </tbody>
+      </table>
   </div>
   <script>
     $.get("./nav.html", function(data){
