--- a/dev.html
+++ b/dev.html
@@ -15,9 +15,10 @@
   <!-- Page Container -->
   <div class="container">
     <h2>Development Tools and Notes</h2>
-    <h3>Sublime Tips</h3>
-      <p><a href="https://www.sublimetext.com/" class="Sublime Text Link">Sublime Text</a> is an awesome text editor. It has a vibrant community with a large library of useful and lightweight plug ins. For most of these you can substitute CTRL for CMD if you are using Windows. </p>
-    <h3>Favorite Sublime Hot Keys</h3>
+    <h3>Sublime Text</h3>
+      <p><a href="https://www.sublimetext.com/" class="Sublime Text Link">Sublime Text</a> is an awesome text editor. It has a vibrant community with a large library of useful and lightweight plug ins. For most of these you can substitute Control for Command if you are using Windows. </p>
+    <h4>Most used Sublime Hot Keys</h3>
+<!-- Sublime Text Table -->
       <table class="table table-striped table-hover">
         <thread class="thread-inverse">
           <tr>
@@ -88,6 +89,42 @@
           </tr>
         </tbody>
       </table>
+
+      <h3>Emmet</h3>
+      Emmet is
+<!-- Emmet Table -->
+      <table class="table">
+        <thread>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thread>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h3>Bootstrap</h3>
+<!-- Bootstrap Table -->
+      <table class="table">
+        <thread>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thread>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+
   </div>
   <script>
     $.get("./nav.html", function(data){
