--- a/nav.html
+++ b/nav.html
@@ -14,18 +14,15 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="links.html">Links</a></li>
-            <li><a href="mvc.html">MVC</a></li>
             <!-- Dropdown menu for development -->
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
+                  <li><a href="#">Actions</a></li>
                   <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
+                  <li class="dropdown-header">Development</li>
+                  <li><a href="dev.html">Tool and Notes</a></li>
+                  <li><a href="mvc.html">MVC Architecture</a></li>
                 </ul>
             </li>
             <!-- End Dropdown -->
