--- a/nav.html
+++ b/nav.html
@@ -16,7 +16,7 @@
             <li><a href="links.html">Links</a></li>
             <!-- Dropdown menu for development -->
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Development <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Actions</a></li>
                   <li role="separator" class="divider"></li>
@@ -26,6 +26,18 @@
                 </ul>
             </li>
             <!-- End Dropdown -->
+            <!-- InfoSec Dropdown -->
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">InfoSec <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Actions</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-header">Development</li>
+                  <li><a href="dev.html">Tool and Notes</a></li>
+                  <li><a href="mvc.html">MVC Architecture</a></li>
+                </ul>
+            </li>
+            <!-- End infosec dropdown -->
           </ul>
         </div>
         <!-- End Static -->
