--- a/nav.html
+++ b/nav.html
@@ -13,16 +13,13 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="links.html">Links</a></li>
             <!-- Dropdown menu for development -->
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Development <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Actions</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Development</li>
                   <li><a href="dev.html">Tool and Notes</a></li>
                   <li><a href="mvc.html">MVC Architecture</a></li>
+                  <li><a href="links.html">Links</a></li>
                 </ul>
             </li>
             <!-- End Dropdown -->
@@ -32,9 +29,21 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">Actions</a></li>
                   <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Development</li>
-                  <li><a href="dev.html">Tool and Notes</a></li>
-                  <li><a href="mvc.html">MVC Architecture</a></li>
+                  <li class="dropdown-header">Tools</li>
+                  <li><a href="#">Stuff</a></li>
+                  <li><a href="#">Stuff</a></li>
+                </ul>
+            </li>
+            <!-- End infosec dropdown -->
+            <!-- SysAdmin Dropdown -->
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Systems <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Actions</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-header">Tools</li>
+                  <li><a href="#">Stuff</a></li>
+                  <li><a href="#">Stuff</a></li>
                 </ul>
             </li>
             <!-- End infosec dropdown -->
