--- a/dev.html
+++ b/dev.html
@@ -16,7 +16,7 @@
   <div class="container">
     <h2>Development Tools and Notes</h2>
     <h3>Sublime Text</h3>
-      <p><a href="https://www.sublimetext.com/" class="Sublime Text Link">Sublime Text</a> is an awesome text editor. It has a vibrant community with a large library of useful and lightweight plug ins. For most of these you can substitute Control for Command if you are using Windows. </p>
+      <p><a href="https://www.sublimetext.com/" class="Sublime Text Link">Sublime Text</a> is a personal favorite of mine. It has a vibrant community with a large library of useful and lightweight plug ins. These shortcuts are for OSX, most of these you can substitute Control for Command if you are using Windows. </p>
     <h4>Most used Sublime Hot Keys</h3>
 <!-- Sublime Text Table -->
       <table class="table table-striped table-hover">
@@ -91,13 +91,13 @@
       </table>
 
       <h3>Emmet</h3>
-      Emmet is
+      Emmet is  a toolkit for web development. It allows you to use shorthand to write full HTML and CSS.  I use it with Sublime Text and VIM but it can be used with many other text editors.  For sublime text all you need do is hit tab after any of the shorthand you type. (Note, your file extension must be the supported type, i.e. html/css).
 <!-- Emmet Table -->
       <table class="table">
         <thread>
           <tr>
-            <th></th>
-            <th></th>
+            <th>Action</th>
+            <th>Command</th>
           </tr>
         </thread>
         <tbody>
