Added kb pic and txt content

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="bootstrap/css/custom.css" rel="stylesheet">
   <script src="http://code.jquery.com/jquery.min.js"></script>
-  <title>Info</title>
+  <title>Unite System</title>
 </head>
 <body>
   <!-- Nav Bar -->
   <div id="cnavbar"></div>
   <!-- Page Container -->
   <div class="container">
-
+  <img src="kb-final.jpeg" alt="Banner Image" class="img-responsive img-rounded">
 
   <h2>About</h2>
   <p>This site serves as a reference source for myself and place to organize my ideas.  I also use it as a playground and sandbox. I can test new ideas and showcase things I have been working s</p>
