--- a/dev.html
+++ b/dev.html
@@ -7,7 +7,7 @@
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="bootstrap/css/custom.css" rel="stylesheet">
   <script src="http://code.jquery.com/jquery.min.js"></script>
-  <title>Info</title>
+  <title>Tools and Notes</title>
 </head>
 <body>
   <!-- Nav Bar -->
@@ -102,7 +102,8 @@
         </thread>
         <tbody>
           <tr>
-            <td></td>
+            <td
+            </td>
             <td></td>
           </tr>
         </tbody>
@@ -110,6 +111,22 @@
 
       <h3>Bootstrap</h3>
 <!-- Bootstrap Table -->
+      <table class="table">
+        <thread>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thread>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <!-- Imagemagick Table -->
       <table class="table">
         <thread>
           <tr>
