--- a/links.html
+++ b/links.html
@@ -7,7 +7,7 @@
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="bootstrap/css/custom.css" rel="stylesheet">
   <script src="http://code.jquery.com/jquery.min.js"></script>
-  <title>Info</title>
+  <title>Links</title>
 </head>
 <body>
   <!-- Nav Bar -->
