--- a/dev.html
+++ b/dev.html
@@ -126,22 +126,14 @@
         </tbody>
       </table>
 
-      <!-- Imagemagick Table -->
-      <table class="table">
-        <thread>
-          <tr>
-            <th></th>
-            <th></th>
-          </tr>
-        </thread>
-        <tbody>
-          <tr>
-            <td></td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
+<!-- Imagemagick Table -->
+    <h3>ImageMagick</h3>
 
+    <h4>List image data</h4>
+    Handy to find out the resolution from the command line.
+    <pre><code>identify image.jpg</code></pre>
+    You could also use
+    <pre><code>identify -verbose info: image.jpg</code></pre>
   </div>
   <script>
     $.get("./nav.html", function(data){
