--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="cnavbar"></div>
   <!-- Page Container -->
   <div class="container">
-  <img src="kb-final.jpeg" alt="Banner Image" class="img-responsive img-rounded">
+  <img src="banner.jpg" alt="Banner Image" class="img-responsive img-rounded">
 
   <h2>About</h2>
   <p>This site serves as a reference source for myself and place to organize my ideas.  I also use it as a playground and sandbox. I can test new ideas and showcase things I have been working s</p>
