page updates and jpg added

--- a/dev.html
+++ b/dev.html
@@ -133,7 +133,7 @@
     Handy to find out the resolution from the command line.
     <pre><code>identify image.jpg</code></pre>
     You could also use
-    <pre><code>identify -verbose info: image.jpg</code></pre>
+    <pre><code>identify -verbose image.jpg</code></pre>
   </div>
   <script>
     $.get("./nav.html", function(data){
