--- a/nav.html
+++ b/nav.html
@@ -19,7 +19,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="dev.html">Tool and Notes</a></li>
                   <li><a href="mvc.html">MVC Architecture</a></li>
-                  <li><a href="links.html">Links</a></li>
+                  <li><a href="http://github.com/unites">My Github Page</a></li>
                 </ul>
             </li>
             <!-- End Dropdown -->
@@ -47,6 +47,7 @@
                 </ul>
             </li>
             <!-- End infosec dropdown -->
+            <li><a href="links.html">Reference Links</a></li>
           </ul>
         </div>
         <!-- End Static -->
