--- a/usefull.html
+++ b/usefull.html
@@ -7,17 +7,14 @@
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="bootstrap/css/custom.css" rel="stylesheet">
   <script src="http://code.jquery.com/jquery.min.js"></script>
-  <title>Unite System</title>
+  <title>Info</title>
 </head>
 <body>
   <!-- Nav Bar -->
   <div id="cnavbar"></div>
   <!-- Page Container -->
   <div class="container">
-  <img src="banner-n.jpg" alt="Banner Image" class="img-responsive img-rounded">
-
-  <h2>About</h2>
-  <p>Welcome!  This is my little corner of the Internet.  It serves as a reference source, blog, and general sandbox for learning.  I am not using a Content Management Systems (CMS), this site has been written by me using HTML/CSS/JS, ruby and the bootstrap framework (so not entirely from scratch).  End goal of this site is to better educate myself about Full Stack Web development, infosec, and systems administration.  I am here to learn so if you see something you think could be done better, a correction, or just some valuable info please share it with me: learn@unitesystem.com</p>
+  
   </div>
   <script>
     $.get("./nav.html", function(data){
